Closed Bug 1275448 Opened 8 years ago Closed 8 years ago

Intermittent e10s PROCESS-CRASH | Main app process exited normally | application crashed [@ JS::Zone::~Zone()] after Assertion failure: typeDescrObjects.empty(), at /builds/slave/m-cen-m64-d-000000000000000000/build/src/js/src/gc/Zone.cpp:61

Categories

(Core :: JavaScript: GC, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
e10s + ---
firefox50 --- fixed

People

(Reporter: philor, Assigned: jonco)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

Blocks: e10s-tests
tracking-e10s: --- → +
From the logs we're leaking a whole bunch of stuff at shutdown (see logs) which is also causing this assert to go off.
Intermittent test crash
Priority: -- → P3
This doesn't fix the underlying problem which is that we sometimes leak, it just means that we don't crash due to an assertion failure in that case.

The assertion still runs if we don't leak which is most of the time.
Assignee: nobody → jcoppeard
Attachment #8773307 - Flags: review?(sphink)
Comment on attachment 8773307 [details] [diff] [review]
bug1275448-dont-crash-on-leak

Review of attachment 8773307 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jsgc.cpp
@@ +3599,5 @@
>  
>                  // We are about to delete the Zone; this will leave the Zone*
>                  // in the arena header dangling if there are any arenas
>                  // remaining at this point.
> +                mozilla::DebugOnly<bool> arenasEmpty = zone->arenas.checkEmptyArenaLists();

Can you name this allArenasEmpty?
Attachment #8773307 - Flags: review?(sphink) → review+
(In reply to Steve Fink [:sfink] [:s:] from comment #7)
> Can you name this allArenasEmpty?

I don't want to do this because it's not just a predicate but prints information about any cells that are still live (in debug builds).
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c9abfc5925a2
Don't crash on shutdown due to non-empty type descriptors set if we leak r=sfink
(In reply to Jon Coppeard (:jonco) from comment #8)
> (In reply to Steve Fink [:sfink] [:s:] from comment #7)
> > Can you name this allArenasEmpty?
> 
> I don't want to do this because it's not just a predicate but prints
> information about any cells that are still live (in debug builds).

I just meant the DebugOnly<bool> local variable, not the method name, which I'm fine with. But it's fine.
(In reply to Steve Fink [:sfink] [:s:] from comment #10)
Ah, sorry, I misunderstood your comment.
https://hg.mozilla.org/mozilla-central/rev/c9abfc5925a2
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: