Bug 1275448 - Don't crash on shutdown due to non-empty type descriptors set if we leak r=sfink